# praisonai-editor

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.agent/: apply_highlights.py  build_articles.py  build_post.py
.github/workflows/: docs.yml
agent/prompt-edit/: index.html
agent/tools/: index.html
api/: index.html
api/edit_media/: index.html
api/models/: index.html
api/plans/: index.html
api/transcription/: index.html
artifacts/: index.html
assets/: extra.css
commands/convert/: index.html
commands/edit/: index.html
commands/plan/: index.html
commands/probe/: index.html
commands/transcribe/: index.html
demix/: index.html
demix/cache/: index.html
demix/primary-zone/: index.html
detection/: index.html
detection/ensemble/: index.html
detection/ffmpeg/: index.html
detection/ina/: index.html
detection/librosa/: index.html
docs/: index.md  install.md  quickstart.md
docs/agent/: prompt-edit.md  tools.md
docs/api/: edit_media.md  index.md  models.md  plans.md  transcription.md
docs/artifacts/: index.md
docs/commands/: convert.md  edit.md  plan.md  probe.md  transcribe.md
docs/demix/: cache.md  index.md  primary-zone.md
docs/detection/: ensemble.md  ffmpeg.md  ina.md  index.md  librosa.md
docs/presets/: clean.md  course.md  index.md  meeting.md  no_silence.md  podcast.md  (+2 more)
install/: index.html
mac/: audio-db-chart.py  audio-db-chart.sh  audio-edit-ai.sh  autoedit-audio.sh  cut-silence.py  install-workflows.sh
praisonai_editor/: __init__.py  __main__.py  _demix.py  agent_pipeline.py  agent_tool.py  cli.py  convert.py  detect.py  models.py  phrase_trim.py  pipeline.py  plan.py  probe.py  protocols.py  render.py  transcribe.py  trim_eval.py
presets/: index.html
protocols/: index.html
quickstart/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
tests/: test_agent_tool.py  test_demix.py  test_extract_text.py  test_models.py  test_phrase_trim_cache.py  test_plan.py  test_trim_eval.py
(+56 files in other folders)
